fea-rs/test-data/compile-tests/mini-latin/bad/lookup_multiple_flags.fea
# within a named lookup, all rules must have same lookupflag
lookup foo {
    lookupflag 1;
    sub a by b;
    lookupflag 2;
    sub x by y;
} foo;

# this is fine, since no rules in the lookup use the second lookupflag
lookup bar {
    lookupflag 1;
    sub g by h;
    lookupflag 0;
} bar;
